--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -48,3 +48,46 @@ body{
     background-color: red;
     border: 1px solid;
 }
+
+.mainContent{
+    align-self: stretch;
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+    gap:20px;
+}
+
+.score-level-container{
+    display: flex;
+    flex-flow: row wrap;
+    gap:10px; 
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.currLevel{
+    display:flex;
+    justify-content: center;
+    font-size:20px;
+    font-weight: bolder;
+    border-radius: 5px;
+    padding:10px;
+    border:1px solid red;
+    flex-grow:1;
+}
+
+.scoreKeeper{
+    font-size: 20px;
+    font-weight: bolder;
+    border-radius:5px;
+    padding:10px;
+    background-color: rgb(170, 224, 170);
+    flex-grow:999;
+    border:1px solid green;
+}
+
+.tip{
+    font-size:20px;
+    font-weight: bolder;
+}
+
