--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,42 @@ body{
     align-items: center;
     gap:20px;
     padding-top:10px;
+    min-height: 100vh;
+}
+.loadingScreen{
+    flex:1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.loadingBall{
+    width:200px;
+    height:200px;
+    animation: spin 1s linear infinite;
+    animation-play-state: running;
+}
+
+@keyframes spin {
+    100%{
+        transform:rotate(360deg);
+    }
+}
+
+.loadingWord{
+    font-size: 20px;
+    font-weight: bolder;
+    animation: fade-in-out 1s linear infinite;
+}
+
+@keyframes fade-in-out {
+    0%, 100%{
+        opacity:0;
+    }
+    50%{
+        opacity:1;
+    }
 }
 
 .header{
@@ -91,3 +127,43 @@ body{
     font-weight: bolder;
 }
 
+.cards{
+    --grid-col: auto-fit;
+}
+
+@media (min-width: calc(120px * 5)) {
+    .cards{
+        --grid-col: 5;
+    }
+}
+.cards{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(var(--grid-col, auto-fit), 120px);
+    grid-auto-rows: 145px;
+    align-self: stretch;
+    justify-content: center;
+}
+
+.cards > div{
+    padding:10px;
+    -moz-box-shadow: 0 0 10px #ccc; 
+    -webkit-box-shadow: 0 0 10px #ccc; 
+    box-shadow: 0 0 10px #ccc;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.cards > div:hover{
+    transform:scale(1.1);
+}
+.pokeName{
+    font-size: 20px;
+    font-weight: bolder;
+    display: flex;
+    justify-content: center;
+}
+img{
+    width:100px;
+    height:100px;
+}
